--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 <body>
     <div class="container">
         <div class="profile-section">
-            <img src="https://i.ibb.co/q1z6fT1/profile-kcoaching.jpg" alt="Photo de profil K_COACHING" class="profile-picture">
+            <img src="logo.jpg" alt="Logo K_COACHING" class="profile-picture">
             <h1>K_COACHING</h1>
             <p class="bio-text">Coach Sportif & Diététique 🥗🏋️‍♀️</p>
         </div>
