--- a/index.html
+++ b/index.html
@@ -159,6 +159,10 @@
         </div>
 
         <a href="https://kcoaching.systeme.io/programme" target="_blank" rel="noopener noreferrer" class="link-button">Mon programme sur mesure</a>
+        <a href="https://kcoaching02.github.io/METAGEMINI/" target="_blank" rel="noopener noreferrer" class="link-button">Ton bilan métabolique ici</a>
+        <a href="https://shop.beacons.ai/kcoaching/910d5675-39f4-4465-9e10-18b5abbce84f" target="_blank" rel="noopener noreferrer" class="link-button">Soins énergétiques</a>
+        <a href="#" class="link-button" data-placeholder="creer-business-enligne">Crée ton business en ligne</a>
+        <a href="#" class="link-button" data-placeholder="club-viral">Le Club Viral</a>
         <a href="https://kcoaching.systeme.io/contact" target="_blank" rel="noopener noreferrer" class="link-button">Me contacter</a>
         
         <div class="social-icons">
