--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>K_COACHING</title>
+    <title>K'COACHING</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
@@ -101,16 +101,16 @@
         }
 
         .link-button img {
-            width: 30px;
+            width: 30px; /* Taille de l'icône dans le bouton */
             height: 30px;
-            margin-right: 15px;
-            border-radius: 5px;
+            margin-right: 15px; /* Espace entre l'icône et le texte */
+            border-radius: 5px; /* Léger arrondi pour l'image */
             object-fit: cover;
             transition: transform 0.2s ease;
         }
 
         .link-button:hover img {
-            transform: scale(1.05);
+            transform: scale(1.05); /* Effet de légère augmentation de l'image au survol */
         }
 
         .highlight-button {
@@ -201,8 +201,8 @@
 <body>
     <div class="container">
         <div class="profile-section">
-            <img src="logo.jpg" alt="Logo K_COACHING" class="profile-picture">
-            <h1>K_COACHING</h1>
+            <img src="logo.jpg" alt="Logo K'COACHING" class="profile-picture">
+            <h1>K'COACHING</h1>
         </div>
 
         <a href="https://kcoaching02.github.io/METAGEMINI/" target="_blank" rel="noopener noreferrer" class="link-button highlight-button">
