--- a/index.html
+++ b/index.html
@@ -215,9 +215,9 @@
             <span>Soins énergétiques</span>
         </a>
 
-        <a href="#" class="link-button" data-placeholder="creer-business-enligne">Crée ton business en ligne</a>
+        <a href="https://stan.store/Brilleetvibre/p/formation-dsa--digital-success-academy" target="_blank" rel="noopener noreferrer" class="link-button">Crée ton business en ligne</a>
 
-        <a href="#" class="link-button" data-placeholder="club-viral">Le Club Viral</a>
+        <a href="https://stan.store/affiliates/80c38116-8aa0-4d1f-9199-39de2694025b" target="_blank" rel="noopener noreferrer" class="link-button">Le Club Viral</a>
         
         <a href="https://kcoaching.systeme.io/contact" target="_blank" rel="noopener noreferrer" class="link-button">Me contacter</a>
 
