--- a/index.html
+++ b/index.html
@@ -158,7 +158,6 @@
         /* Couleurs spécifiques aux marques au survol */
         .social-icon.instagram:hover { color: #E1306C; transform: translateY(-3px); }
         .social-icon.tiktok:hover { color: #69C9D0; transform: translateY(-3px); }
-        .social-icon.youtube:hover { color: #FF0000; transform: translateY(-3px); }
         .social-icon.facebook:hover { color: #1877F2; transform: translateY(-3px); }
         .social-icon.linkedin:hover { color: #0A66C2; transform: translateY(-3px); }
 
@@ -222,16 +221,13 @@
         <a href="https://kcoaching.systeme.io/contact" target="_blank" rel="noopener noreferrer" class="link-button">Me contacter</a>
 
         <div class="social-icons">
-            <a href="https://www.instagram.com/k_coaching.s/" target="_blank" rel="noopener noreferrer" class="social-icon instagram" aria-label="Instagram">
+            <a href="https://www.instagram.com/kcoaching02/" target="_blank" rel="noopener noreferrer" class="social-icon instagram" aria-label="Instagram">
                 <i class="fab fa-instagram"></i>
             </a>
-            <a href="https://www.tiktok.com/@k_coaching.s" target="_blank" rel="noopener noreferrer" class="social-icon tiktok" aria-label="TikTok">
+            <a href="https://www.tiktok.com/@kcoaching?is_from_webapp=1&sender_device=pc" target="_blank" rel="noopener noreferrer" class="social-icon tiktok" aria-label="TikTok">
                 <i class="fab fa-tiktok"></i>
             </a>
-            <a href="https://www.youtube.com/@k_coaching.s" target="_blank" rel="noopener noreferrer" class="social-icon youtube" aria-label="YouTube">
-                <i class="fab fa-youtube"></i>
-            </a>
-            </div>
+        </div>
     </div>
 </body>
 </html>
