--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
         <a href="https://stan.store/affiliates/80c38116-8aa0-4d1f-9199-39de2694025b" target="_blank" rel="noopener noreferrer" class="link-button">Le Club Viral</a>
         
-        <a href="https://kcoaching.systeme.io/contact" target="_blank" rel="noopener noreferrer" class="link-button">Me contacter</a>
+        <a href="https://www.instagram.com/direct/t/17846779833046780" target="_blank" rel="noopener noreferrer" class="link-button">Me contacter</a>
 
         <div class="social-icons">
             <a href="https://www.instagram.com/kcoaching02/" target="_blank" rel="noopener noreferrer" class="social-icon instagram" aria-label="Instagram">
