--- a/index.html
+++ b/index.html
@@ -183,7 +183,6 @@
         /* Couleurs spécifiques aux marques au survol */
         .social-icon.instagram:hover { color: #E1306C; transform: translateY(-3px); }
         .social-icon.tiktok:hover { color: #69C9D0; transform: translateY(-3px); }
-        /* .social-icon.youtube:hover { color: #FF0000; transform: translateY(-3px); } <-- Supprimé */
         .social-icon.facebook:hover { color: #1877F2; transform: translateY(-3px); }
         .social-icon.linkedin:hover { color: #0A66C2; transform: translateY(-3px); }
 
@@ -250,7 +249,7 @@
         </a>
 
         <a href="https://stan.store/affiliates/80c38116-8aa0-4d1f-9199-39de2694025b" target="_blank" rel="noopener noreferrer" class="link-button">
-            <img src="club-viral-icon.jpg" alt="Icône Club Viral">
+            <img src="CLUBVIRAL.JPG" alt="Icône Club Viral">
             <span>Rejoins le Club Viral & Décuple ta Visibilité</span>
         </a>
         
