--- a/index.html
+++ b/index.html
@@ -134,6 +134,12 @@
             transform: scale(1.1); /* Effet de légère augmentation de l'image au survol */
         }
 
+        /* Style spécifique pour l'image du Club Viral */
+        .link-button img.club-viral-icon {
+            width: 40px; /* Taille légèrement plus grande */
+            height: 40px;
+        }
+
         .highlight-button {
             background-color: var(--highlight-pastel);
             color: var(--text-dark);
@@ -183,6 +189,7 @@
         /* Couleurs spécifiques aux marques au survol */
         .social-icon.instagram:hover { color: #E1306C; transform: translateY(-3px); }
         .social-icon.tiktok:hover { color: #69C9D0; transform: translateY(-3px); }
+        /* .social-icon.youtube:hover { color: #FF0000; transform: translateY(-3px); } <-- Supprimé */
         .social-icon.facebook:hover { color: #1877F2; transform: translateY(-3px); }
         .social-icon.linkedin:hover { color: #0A66C2; transform: translateY(-3px); }
 
@@ -214,6 +221,11 @@
                 width: 25px;
                 height: 25px;
                 margin-right: 10px;
+            }
+            /* Ajustement responsive pour l'image du Club Viral */
+            .link-button img.club-viral-icon {
+                width: 30px;
+                height: 30px;
             }
             .social-icons {
                 margin-top: 30px;
@@ -249,7 +261,7 @@
         </a>
 
         <a href="https://stan.store/affiliates/80c38116-8aa0-4d1f-9199-39de2694025b" target="_blank" rel="noopener noreferrer" class="link-button">
-            <img src="CLUBVIRAL.JPG" alt="Icône Club Viral">
+            <img src="CLUBVIRAL.JPG" alt="Icône Club Viral" class="club-viral-icon">
             <span>Rejoins le Club Viral & Décuple ta Visibilité</span>
         </a>
         
