--- a/index.html
+++ b/index.html
@@ -134,10 +134,11 @@
             transform: scale(1.1); /* Effet de légère augmentation de l'image au survol */
         }
 
-        /* Style spécifique pour l'image du Club Viral */
+        /* Style spécifique pour l'image du Club Viral - Agrandie */
         .link-button img.club-viral-icon {
-            width: 40px; /* Taille légèrement plus grande */
-            height: 40px;
+            width: 50px; /* Encore plus grande */
+            height: 50px;
+            margin-right: 20px; /* Plus d'espace pour un meilleur alignement */
         }
 
         .highlight-button {
@@ -189,7 +190,6 @@
         /* Couleurs spécifiques aux marques au survol */
         .social-icon.instagram:hover { color: #E1306C; transform: translateY(-3px); }
         .social-icon.tiktok:hover { color: #69C9D0; transform: translateY(-3px); }
-        /* .social-icon.youtube:hover { color: #FF0000; transform: translateY(-3px); } <-- Supprimé */
         .social-icon.facebook:hover { color: #1877F2; transform: translateY(-3px); }
         .social-icon.linkedin:hover { color: #0A66C2; transform: translateY(-3px); }
 
@@ -224,8 +224,9 @@
             }
             /* Ajustement responsive pour l'image du Club Viral */
             .link-button img.club-viral-icon {
-                width: 30px;
-                height: 30px;
+                width: 35px; /* Taille légèrement plus grande sur mobile aussi */
+                height: 35px;
+                margin-right: 15px;
             }
             .social-icons {
                 margin-top: 30px;
