--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
         /* Couleurs spécifiques aux marques au survol */
         .social-icon.instagram:hover { color: #E1306C; transform: translateY(-3px); }
         .social-icon.tiktok:hover { color: #69C9D0; transform: translateY(-3px); }
+        /* .social-icon.youtube:hover { color: #FF0000; transform: translateY(-3px); } <-- Supprimé */
         .social-icon.facebook:hover { color: #1877F2; transform: translateY(-3px); }
         .social-icon.linkedin:hover { color: #0A66C2; transform: translateY(-3px); }
 
@@ -247,7 +248,7 @@
         </div>
 
         <a href="https://kcoaching02.github.io/METAGEMINI/" target="_blank" rel="noopener noreferrer" class="link-button highlight-button">
-            <img src="bilan-metabolique.jpg" alt="Icône Bilan Métabolique">
+            <img src="CALCULATEUR.jpg" alt="Icône Bilan Métabolique">
             <span>Découvre ton Bilan Métabolique Idéal !</span>
         </a>
 
@@ -257,7 +258,7 @@
         </a>
 
         <a href="https://stan.store/Brilleetvibre/p/formation-dsa--digital-success-academy" target="_blank" rel="noopener noreferrer" class="link-button">
-            <img src="cree-business.jpg" alt="Icône Créer Business">
+            <img src="DSA.png" alt="Icône Créer Business">
             <span>Lance ton Business en Ligne Rentable</span>
         </a>
 
