--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 
         <a href="https://kcoaching02.github.io/METAGEMINI/" target="_blank" rel="noopener noreferrer" class="link-button highlight-button">
             <img src="CALCULATEUR.jpg" alt="Icône Bilan Métabolique">
-            <span>Découvre ton Bilan Métabolique Idéal !</span>
+            <span>Découvre ton Bilan Métabolique !</span>
         </a>
 
         <a href="https://shop.beacons.ai/kcoaching/910d5675-39f4-4465-9e10-18b5abbce84f" target="_blank" rel="noopener noreferrer" class="link-button">
